public/css/style.css
nav ul li {
  text-decoration: none;
  display: inline-block;
  margin-right: .3em;
}

h1 {
 
  font-family: "Lucida Handwriting", cursive;
  color: rgb(255, 255, 255);
  background-color: rgba(23, 205, 17, 0.8);
}

h3 {
  font-family: "Papyrus", fantasy;
}

body {
  background-image: url(/assets/images/wallpaper.jpg);
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size:auto;
  text-align: center;
}

img {
  width: 50%;
  height: 50%;
}

.index-container{
  max-width: 400px;

}

#images{
  border:5px solid black;
  max-width: 300px;
  max-height: 300px;
}

#SmallImages{
  border:5px solid black;
  max-width: 300px;
  max-height: 500px;
}
#SmallImagesDiv{
  text-align: center;
}

*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.head {
  background-color: rgb(228, 28, 254);
  border-radius: 5px;
  margin-top: -40px;
  -webkit-box-shadow: 14px 10px 38px -10px rgba(224,11,224,1);
  -moz-box-shadow: 14px 10px 38px -10px rgba(224,11,224,1);
  box-shadow: 14px 10px 38px -10px rgba(224,11,224,1);
}

.effect-1 {
  border:0;
  outline: none;
  width: 100%;
  padding: 7px 0;
  border: 2px solid rgb(73, 73, 73);
  -webkit-box-shadow: 6px 6px 10px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 6px 6px 10px 0px rgba(0,0,0,0.75);
  box-shadow: 6px 6px 10px 0px rgba(0,0,0,0.75);
}

.effect-1 ~ .Focus-border {
  position: absolute;
  bottom: 0;
  left: 50%;
  width: 0;
  height: 2px;
  background-color:rgb(175, 0, 0);
  transition: 0.4s;
}

.effect-1:focus ~ .Focus-border{
  width: 100%;
  transition: 0.4s;
  left: 0;
}

.contact-body {
  background-color: rgb(36, 208, 208);
  -webkit-box-shadow: 14px 10px 38px -10px rgba(224,11,224,1);
  -moz-box-shadow: 14px 10px 38px -10px rgba(224,11,224,1);
  box-shadow: 14px 10px 38px -10px rgba(224,11,224,1);
}

.btn1 {
  background-color: rgb(67, 108, 255);
  color: white;
  outline: none;
  border: none;
  border-radius: 5px;
  height: 40px;
  width: 145px;
  -webkit-box-shadow: 0px 0px 6px 1px rgba(255,255,255,1);
  -moz-box-shadow: 0px 0px 6px 1px rgba(255,255,255,1);
  box-shadow: 0px 0px 6px 1px rgba(255,255,255,1);
}
.btn1:hover{
  color:#000000;
  background-color:#FFFFFF;
}

.btn2{
  background-color: rgb(0, 0, 0);
  outline: none;
  border: none;
  border-radius: 5px;
  height: 40px;
  width: 145px;
  -webkit-box-shadow: 0px 0px 14px 1px rgba(61,214,0,1);
  -moz-box-shadow: 0px 0px 14px 1px rgba(61,214,0,1);
  box-shadow: 0px 0px 14px 1px rgba(61,214,0,1);
  color: rgb(9, 219, 26);
}

.btn3{
  background-color: rgb(0, 222, 96);
  outline: none;
  border: none;
  border-radius: 5px;
  height: 40px;
  max-width: 240px;
  padding-left: 10px;
  padding-right: 10px;
  color: rgb(0, 0, 0);
  -webkit-box-shadow: 0px 0px 6px 1px rgba(255,255,255,1);
  -moz-box-shadow: 0px 0px 6px 1px rgba(255,255,255,1);
  box-shadow: 0px 0px 6px 1px rgba(255,255,255,1);
}
.btn3:hover {
  color: white;
  background-color: red;
}

.btn4 {
  background-color: rgb(213, 0, 0);
  outline: none;
  border: none;
  border-radius: 5px;
  height: 40px;
  width: 145px;
  -webkit-box-shadow: 0px 0px 14px 1px rgb(156, 5, 5);
  -moz-box-shadow: 0px 0px 14px 1px rgb(156, 5, 5);
  box-shadow: 0px 0px 14px 1px rgb(156, 5, 5);
  color: rgb(0, 0, 0);
}

.btn6 {
  background-color: rgb(243, 248, 0);
  outline: none;
  border: none;
  border-radius: 5px;
  height: 40px;
  width: 145px;
  -webkit-box-shadow: 0px 0px 14px 1pxrgb(184, 240, 1);
  -moz-box-shadow: 0px 0px 14px 1px rgb(184, 240, 1);
  box-shadow: 0px 0px 14px 1px rgb(184, 240, 1);
  color: rgb(0, 0, 0);
}

.btn5{
  background-color: rgb(0, 0, 0);
  outline: none;
  border: none;
  border-radius: 5px;
  height: 40px;
  width: 145px;
  -webkit-box-shadow: 0px 0px 14px 1px rgba(5,43,156,1);
  -moz-box-shadow: 0px 0px 14px 1px rgba(5,43,156,1);
  box-shadow: 0px 0px 14px 1px rgba(5,43,156,1);
  color: rgb(233, 117, 0);
}

.signup-body{
  background-color: rgb(138, 138, 138, 0.7);
  -webkit-box-shadow: 0px 0px 23px 0px rgba(255,255,255,1);
  -moz-box-shadow: 0px 0px 23px 0px rgba(255,255,255,1);
  box-shadow: 0px 0px 23px 0px rgba(255,255,255,1);
}

.login-body{
  background-color: rgb(138, 138, 138, 0.4);
  -webkit-box-shadow: 0px 0px 23px 0px rgba(255,255,255,1);
  -moz-box-shadow: 0px 0px 23px 0px rgba(255,255,255,1);
  box-shadow: 0px 0px 23px 0px rgba(255,255,255,1);
}

.results-body {
  background-color:rgb(207, 207, 207);
}

.results-title {
  margin: auto;
   max-width: 300px;
}

.fav-card-body{
  background-color: tan;
}

.results-card-header{
  color: white;
  background-color: grey;
}

.profile-text{
  color: white;
  background-color: black;
}

.profile-body{
  color: white;
  background-color:royalblue
}

.card {
  margin: 0 auto; 
  float: none;
  margin-bottom: 10px; 
  -webkit-box-shadow: 6px 6px 10px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 6px 6px 10px 0px rgba(0,0,0,0.75);
  box-shadow: 6px 6px 10px 0px rgba(0,0,0,0.75);
}

.adopt-img {
  -webkit-box-shadow: 6px 6px 10px 0px rgba(0,0,0,0.75);
  -moz-box-shadow: 6px 6px 10px 0px rgba(0,0,0,0.75);
  box-shadow: 6px 6px 10px 0px rgba(0,0,0,0.75);
}

.no-img {
  max-width: 200px;
  max-height: 200px;
  border-radius: 20px;
}

.animal-card {
  background-color: rgb(207, 207, 207);
}

.animal-card-header{
  background-color: rgb(0, 129, 26, 0.7);
}

.FourOhFour{
  background-color: red;
  color: black;
}

.FourOhFourDiv{
  margin:auto;
  max-width: 400px;
}

